Revert "Fixed Heading Color for better visibility"

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ nav ul li a:hover {
   font-family: "Great Vibes", cursive;
   padding: 70px 0 0 70px;
   margin: auto;
-  color: white;
+  color: black;
 }
 
 .left-heading h1 {
